--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
 </head>
 <body>
 Hello!
-<a href="/goodbye">Say goodbye </a> or <a href="/exit">Exit </a>
+
+<a href="first/goodbye">Say goodbye </a> or
+<a href="/exit">Exit </a> or
+<a href="/first/hello?name=Tome&surname=Jone"> Request with parameters</a>
+
+<p th:text="${message}"/>
+
 </body>
 </html>
